--- a/tickets-app/angular.json
+++ b/tickets-app/angular.json
@@ -3,14 +3,14 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-        "ticketsapp": {
+        "tickets": {
             "root": "",
             "sourceRoot": "src/main/webapp",
             "projectType": "application",
             "architect": {}
         }
     },
-    "defaultProject": "ticketsapp",
+    "defaultProject": "tickets",
     "cli": {
         "packageManager": "npm"
     },
