--- a/tickets-app/package.json
+++ b/tickets-app/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "ticketsapp",
+    "name": "tickets",
     "version": "0.0.0",
-    "description": "Description for ticketsapp",
+    "description": "Description for tickets",
     "private": true,
     "license": "UNLICENSED",
     "cacheDirectories": [
