--- a/tickets-app/src/main/resources/config/application.yml
+++ b/tickets-app/src/main/resources/config/application.yml
@@ -61,7 +61,7 @@ management:
 
 spring:
     application:
-        name: ticketsapp
+        name: tickets
     profiles:
         # The commented value for `active` can be replaced with valid Spring profiles to load.
         # Otherwise, it will be filled in by maven when building the WAR file
@@ -115,11 +115,11 @@ jhipster:
         #allow-credentials: true
         #max-age: 1800
     mail:
-        from: ticketsapp@localhost
+        from: tickets@localhost
     swagger:
         default-include-pattern: /api/.*
-        title: ticketsapp API
-        description: ticketsapp API documentation
+        title: tickets API
+        description: tickets API documentation
         version: 0.0.1
         terms-of-service-url:
         contact-name:
