--- a/tickets-app/src/main/docker/mysql.yml
+++ b/tickets-app/src/main/docker/mysql.yml
@@ -1,13 +1,13 @@
 version: '2'
 services:
-    ticketsapp-mysql:
+    tickets-mysql:
         image: mysql:5.7.20
         # volumes:
-        #     - ~/volumes/jhipster/ticketsapp/mysql/:/var/lib/mysql/
+        #     - ~/volumes/jhipster/tickets/mysql/:/var/lib/mysql/
         environment:
             - MYSQL_USER=root
             - MYSQL_ALLOW_EMPTY_PASSWORD=yes
-            - MYSQL_DATABASE=ticketsapp
+            - MYSQL_DATABASE=tickets
         ports:
             - 3306:3306
         command: mysqld --lower_case_table_names=1 --skip-ssl --character_set_server=utf8mb4 --explicit_defaults_for_timestamp
