--- a/tickets-app/src/main/docker/sonar.yml
+++ b/tickets-app/src/main/docker/sonar.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-    ticketsapp-sonar:
+    tickets-sonar:
         image: sonarqube:7.1
         ports:
             - 9001:9000
