--- a/tickets-app/package.json
+++ b/tickets-app/package.json
@@ -19,10 +19,12 @@
         "@fortawesome/fontawesome-svg-core": "1.2.14",
         "@fortawesome/free-solid-svg-icons": "5.7.1",
         "@ng-bootstrap/ng-bootstrap": "4.0.2",
+        "@ng-select/ng-select": "^2.16.4",
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
         "bootstrap": "4.2.1",
         "core-js": "2.6.4",
+        "font-awesome": "^4.7.0",
         "moment": "2.24.0",
         "ng-jhipster": "0.9.1",
         "ngx-cookie": "2.0.1",
