--- a/tickets-app/package.json
+++ b/tickets-app/package.json
@@ -19,7 +19,7 @@
         "@fortawesome/fontawesome-svg-core": "1.2.14",
         "@fortawesome/free-solid-svg-icons": "5.7.1",
         "@ng-bootstrap/ng-bootstrap": "4.0.2",
-        "@ng-select/ng-select": "^2.16.4",
+        "@ng-select/ng-select": "^2.18.0",
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
         "bootstrap": "4.2.1",
@@ -36,15 +36,15 @@
         "zone.js": "0.8.29"
     },
     "devDependencies": {
-        "@angular/cli": "7.3.1",
-        "@angular/compiler-cli": "7.2.4",
+        "@angular/cli": "^7.3.8",
+        "@angular/compiler-cli": "^7.2.14",
         "@ngtools/webpack": "7.3.1",
         "@types/jest": "24.0.0",
         "@types/node": "10.12.24",
         "angular-router-loader": "0.8.5",
         "angular2-template-loader": "0.6.2",
         "autoprefixer": "9.4.7",
-        "browser-sync": "2.26.3",
+        "browser-sync": "^2.26.5",
         "browser-sync-webpack-plugin": "2.2.2",
         "cache-loader": "2.0.1",
         "codelyzer": "4.5.0",
@@ -66,6 +66,7 @@
         "mini-css-extract-plugin": "0.5.0",
         "moment-locales-webpack-plugin": "1.0.7",
         "optimize-css-assets-webpack-plugin": "5.0.1",
+        "postcss-loader": "3.0.0",
         "prettier": "1.16.4",
         "reflect-metadata": "0.1.13",
         "rimraf": "2.6.3",
@@ -79,16 +80,15 @@
         "tslint-config-prettier": "1.18.0",
         "tslint-loader": "3.6.0",
         "typescript": "3.2.4",
-        "postcss-loader": "3.0.0",
-        "xml2js": "0.4.19",
-        "webpack": "4.29.3",
-        "webpack-cli": "3.2.3",
-        "webpack-dev-server": "3.1.14",
+        "webpack": "^4.8.3",
+        "webpack-cli": "^2.1.3",
+        "webpack-dev-server": "^3.1.4",
         "webpack-merge": "4.2.1",
         "webpack-notifier": "1.7.0",
         "webpack-visualizer-plugin": "0.1.11",
         "workbox-webpack-plugin": "3.6.3",
-        "write-file-webpack-plugin": "4.5.0"
+        "write-file-webpack-plugin": "4.5.0",
+        "xml2js": "0.4.19"
     },
     "engines": {
         "node": ">=8.9.0"
