--- a/tickets-app/package.json
+++ b/tickets-app/package.json
@@ -29,6 +29,7 @@
         "ng-jhipster": "0.9.1",
         "ngx-cookie": "2.0.1",
         "ngx-infinite-scroll": "7.0.1",
+        "ngx-paypal": "^5.0.0-beta.10",
         "ngx-webstorage": "2.0.1",
         "rxjs": "6.4.0",
         "swagger-ui": "2.2.10",
