Added some design upgrade in event list

--- a/tickets-app/package.json
+++ b/tickets-app/package.json
@@ -25,12 +25,15 @@
         "bootstrap": "4.2.1",
         "core-js": "2.6.4",
         "font-awesome": "^4.7.0",
+        "jquery": "^3.4.1",
         "moment": "2.24.0",
         "ng-jhipster": "0.9.1",
         "ngx-cookie": "2.0.1",
         "ngx-infinite-scroll": "7.0.1",
+        "ngx-owl-carousel": "^2.0.7",
         "ngx-paypal": "^5.0.0-beta.10",
         "ngx-webstorage": "2.0.1",
+        "owl.carousel": "^2.3.4",
         "rxjs": "6.4.0",
         "swagger-ui": "2.2.10",
         "tslib": "1.9.3",
