--- a/tickets-app/package.json
+++ b/tickets-app/package.json
@@ -20,6 +20,7 @@
         "@fortawesome/free-solid-svg-icons": "5.7.1",
         "@ng-bootstrap/ng-bootstrap": "4.0.2",
         "@ng-select/ng-select": "^2.18.0",
+        "@ngu/carousel": "^1.5.5",
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
         "bootstrap": "4.2.1",
@@ -28,6 +29,7 @@
         "jquery": "^3.4.1",
         "moment": "2.24.0",
         "ng-jhipster": "0.9.1",
+        "ng-simple-slideshow": "^1.2.9",
         "ngx-cookie": "2.0.1",
         "ngx-infinite-scroll": "7.0.1",
         "ngx-owl-carousel": "^2.0.7",
